# userlens-analytics-sdk

./: .gitignore  AutomaticApproach.md  CHANGELOG.md  CLAUDE.md  ManualApproach.md  README.md  SUMMARY.md  package-lock.json  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
.changeset/: config.json  deep-emus-judge.md  metal-teeth-wish.md  network-ignore-methods.md  network-tracker-ignore-self.md
.github/workflows/: release.yml
docs/: SUMMARY.md  api-reference.md  custom-events.md  http-api.md  introduction.md  nextjs.md  proxy-nodejs.md  proxy-python.md  proxy-rails.md  react.md  session-recording.md  troubleshooting.md
docs/nextjs/: client-side.md  proxy.md
docs/react/: client-side.md  proxy.md
js/: package-lock.json  package.json
js/node/: package.json  rollup.config.js
js/node/src/: EventTracker.js
js/web/: package-lock.json  package.json  rollup.config.js  tsconfig.json
js/web/src/: EventTracker.js  api.js  index.js  index.ts  utils.js  utils.ts
js/web/src/EventCollector/: index.js  index.ts
js/web/src/SessionRecorder/: index.js  index.ts
js/web/src/api/: index.ts
js/web/src/react/: index.tsx
js/web/src/types/: index.ts
python/: pyproject.toml
python/userlens/: event_tracker.py  utils.py
src/: index.ts  react.ts  utils.ts
src/EventCollector/: index.ts
src/NetworkTracker/: index.ts
src/SessionRecorder/: index.ts
src/api/: index.ts
src/react/: index.tsx
src/types/: index.ts
