[project]
name = "userlens-analytics-sdk"
version = "1.0.2"
description = ""
authors = [
    {name = "Wudpecker"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "userlens" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
